# teqfarm

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  start_render.py
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/common/: exceptions.py  models.py  pagination.py  permissions.py  throttling.py  viewsets.py
backend/apps/daily_records/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/dashboard/: apps.py  selectors.py  urls.py  views.py
backend/apps/eggs/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/expenses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/farms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/feed/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/flocks/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/health/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/inventory/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/reports/: services.py  urls.py  views.py
backend/apps/sales/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
(+77 files in other folders)
