[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "teqfarm-backend"
version = "0.1.0"
description = "TeqFarm poultry management API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Django>=5.2,<5.3",
  "djangorestframework>=3.16,<3.17",
  "djangorestframework-simplejwt>=5.5,<5.6",
  "django-cors-headers>=4.7,<5",
  "django-filter>=25.1,<26",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.1,<2",
  "Pillow>=11,<12",
  "openpyxl>=3.1,<4",
  "reportlab>=4.4,<5",
  "gunicorn>=23,<24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.11,<5",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_tests.py"]
addopts = "--strict-markers --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["DJ001"]

[tool.setuptools]
py-modules = []
